# glfw-template

./: .gitignore  CMakeLists.txt  CMakeSettings.json  launch.vs.json
src/: CMakeLists.txt  game.cpp  game.h  main.cpp
